--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,66 +3,64 @@ $inner-height: 24vh;
 $translucent: rgba(0,0,0,.6);
 $base-color: #8fd6bd;
 
-
 body {
 	font-family: Arial, sans-serif;
 	margin: 0;
-	color: $base-color;
 }
 
 .header {
+	padding: 20px;
+	width: 100%;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
 	position: fixed;
 	z-index: 100;
-	width: 100%;
 	top: 0;
-	padding: 20px;
-	background-color: rgba(#fff, .3);
+	background-color: rgba(#fff, .5);
 	box-shadow: 0 2px 10px $translucent;
 
 	.logo {
 		max-width: $img-size;
 
-		a{
+		a {
 			display: block;
-		}
 
-		img{
-			max-width: 100%;
+			img {
+				max-width: 100%;
+			}
 		}
 	}
 
-
 	.navigation {
-		flex-basis: 50%;
+		flex-basis: 65%;
 
 		ul {
-			margin: 0;
-			padding: 0;
 			display: flex;
 			justify-content: space-between;
+			padding: 0;
+			margin: 0;
 
 			li {
 				list-style: none;
-				min-width: 150px;
 
 				a {
 					display: block;
 					padding: 15px;
-					background-color: $base-color;
-					color: #000;
-					font-weight: bold;
-					text-align: center;
-					text-decoration: none;
-					text-transform: uppercase;
-					transition: all .3s ease;
 					border-radius: 5px;
+					text-decoration: none;
+					color: black;
+					background-color: $base-color;
+					text-transform: uppercase;
+					font-weight: bold;
+					min-width: 150px;
+					text-align: center;
+					transition: all .3s ease;
 
-					&:hover {
-						background-color: #000;
+					&:hover,
+					&.active {
 						color: $base-color;
+						background-color: black;
 					};
 				}
 			}
@@ -70,52 +68,51 @@ body {
 	}
 }
 
-section {
-	background: url("../img/beetroot-bg.jpg") no-repeat;
-	background-size: cover;
+
+.section {
 	min-height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-image: url("../img/beetroot-bg.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
 	position: relative;
+
 	&::after {
 		content: "";
 		position: absolute;
+		z-index: 1;
 		top: 0;
 		right: 0;
 		bottom: 0;
 		left: 0;
 		background-color: $translucent;
-		z-index: 1;
 	};
 
-	div {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
+	.article {
 		flex-basis: 40%;
+		display: flex;
+		align-items: center;
 		padding: 20px;
 		border-radius: 15px;
-		box-shadow: 2px 2px 10px 0 $translucent;
-		background-color: rgba(#000, .5);
+		background-color: $translucent;
+		color: $base-color;
+		min-height: $inner-height;
 		position: relative;
 		z-index: 2;
-		color: $base-color;
-		min-height: 24vh;
 
 		img {
 			max-width: $img-size;
 			min-width: $img-size;
-			border-radius: 10px;
-			overflow: hidden;
 		}
 
 		h2 {
-			flex-basis: 100%;
 			margin: 0;
 			font-size: 4rem;
-			text-transform: uppercase;
 			text-align: center;
+			flex-basis: 100%;
+			text-transform: uppercase;
 		}
 	}
 }
